# proxsuite-nlp

./: .gersemirc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATIONS.bib  CMakeLists.txt  CONTRIBUTING.md  COPYING.LESSER  README.md  package.xml  pixi.toml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gh-pages.yml  linux.yml  macos-linux-conda.yml  macos-linux-windows-pixi.yml  publish.yml  ros-ci.yml  windows-conda.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  expose-autodiff.cpp  expose-callbacks.cpp  expose-cartesian-product.cpp  expose-constraint.cpp  expose-cost.cpp  expose-function.cpp  expose-ldlt.cpp  expose-manifold.cpp  expose-pinocchio-residuals.cpp  expose-problem.cpp  expose-quadratic-costs.cpp  expose-residual.cpp  expose-results.cpp  expose-solver.cpp  expose-workspace.cpp  module.cpp  policies.hpp  residuals.hpp
bindings/python/include/proxsuite-nlp/python/: deprecation-policy.hpp  function.hpp  fwd.hpp  policies.hpp  polymorphic.hpp
bindings/python/include/proxsuite-nlp/python/utils/: namespace.hpp
bindings/python/proxsuite_nlp/: __init__.py  casadi_utils.py  utils.py  windows_dll_manager.py
bindings/python/utils/: namespace.hpp
build_scripts/pixi/: activation.bat
comparison-proxnlp-ipopt/: talos_yoga_proxnlp.py
conda/proxsuite-nlp-release/: bld.bat  meta.yaml
doc/: Doxyfile.extra.in  header.html  macros.inc
examples/: CMakeLists.txt  camera_pose_optimization.py  cartesian_prod.py  cartpole-endpoint.py  cartpole.py  cartpole_utils.py  circle.cpp  circle.py  cost_sum_barycenter.py  double_pendulum.py  equality-qp.cpp  example-base.hpp  finite-diff.py  function_subclass.py  l1_qp.py  linear.py  manifolds.py  qp.py  so2.cpp  solo_geom_inv_proxnlp-ipopt.py  solo_inverse_geom.py  talos_yoga.py  talos_yoga_proxnlp.py  ur5-ik.cpp  ur_ik.py  utils.py
examples/python/: cartesian_prod.py  cartpole.py  cartpole_utils.py  circle.py  cost_sum_barycenter.py  double_pendulum.py  finite-diff.py  function_subclass.py  linear.py  manifolds.py  solo_geom_inv_proxnlp-ipopt.py  talos_yoga_proxnlp.py
include/proxnlp/: bcl-params.hpp  blocks.hpp  constraint-base.hpp  constraint-base.hxx  context.hpp  cost-function.hpp  cost-function.txx  cost-sum.hpp  cost-sum.hxx  cost-sum.txx  exceptions.hpp  function-base.hpp  function-base.txx  function-ops.hpp  function-ops.txx  fwd.hpp  helpers-base.hpp  lagrangian.hpp  ldlt-allocator.hpp  ldlt-variant.hpp  linesearch-armijo.hpp  logger.hpp  (+25 more)
python/: CMakeLists.txt  context.hpp  expose-autodiff.cpp  expose-callbacks.cpp  expose-cartesian-product.cpp  expose-constraint.cpp  expose-cost.cpp  expose-function.cpp  expose-functor.cpp  expose-ldlt.cpp  expose-manifold.cpp  expose-pinocchio-residuals.cpp  expose-problem.cpp  expose-quadratic-costs.cpp  expose-residual.cpp  expose-results.cpp  expose-solver.cpp  expose-workspace.cpp  function.hpp  fwd.hpp  manifold-functors.hpp  manifold.hpp  module.cpp  residuals.hpp  util.hpp
python/examples/: cartesian-prod.py  circle.py  cost_sum.py  cost_sum_barycenter.py  double_pendulum.py  finite-diff.py  function_subclass.py  functor.py  functor_subclass.py  linear.py  manifolds.py  residual_subclass.py  utils.py
python/lienlp/: __init__.py
python/proxnlp/: __init__.py  utils.py
python/proxsuite_nlp/: casadi_utils.py
scripts/: README.md  plot_bench.py  plot_block_sparse_bench.py  plot_dense_bench.py
src/: CMakeLists.txt  block-kind.cpp  block-ldlt.cpp  blocks.cpp  blocks.hpp  cartesian-product.cpp  constraint-base.cpp  constraint-base.hpp  constraint-base.hxx  constraint-set-product.cpp  constraint-set.cpp  constraint.hpp  constraints.cpp  core.hpp  cost-function.cpp  cost-function.hpp  cost-sum.cpp  cost-sum.hpp  cost-sum.hxx  function-base.cpp  function-base.hpp  function-ops.hpp  functor-base.hpp  functor-ops.hpp  functor.hpp  fwd.hpp  helpers-base.hpp  lagrangian.hpp  ldlt-allocator.cpp  linesearch-armijo.cpp  linesearch-armijo.hpp  linesearch-base.cpp  linesearch-base.hpp  linesearch-cubic-interp.hpp  linesearch-quadratic.hpp  linesearch.cpp  macros.hpp  manifold-base.cpp  manifold-base.hpp  manifold-base.hxx  (+24 more)
src/constraints/: equality-constraint.hpp  state-constraint.hpp
src/costs/: squared-distance.hpp  squared-residual.hpp  squared.hpp
src/helpers/: finite-difference.hpp  history-callback.hpp  print-callback.hpp
src/meritfuncs/: lagrangian.hpp  pdal.hpp  pdal.hxx
src/modelling/autodiff/: finite-difference.hpp
src/modelling/constraints/: equality-constraint.hpp  l1-penalty.hpp  negative-orthant.hpp  quadratic-residual.hpp  state-residual.hpp
src/modelling/costs/: cost-sum.hpp  quadratic-residual.hpp  squared-distance.hpp  squared-residual.hpp
src/modelling/residuals/: cost-to-functor.hpp  linear.hpp  quadratic-residual.hpp  state-residual.hpp
src/modelling/spaces/: cartesian-product.hpp  multibody.hpp  pinocchio-groups.hpp  sphere.hpp  tangent-bundle.hpp  tangent-bundle.hxx  vector-space.hpp
src/multibody/: rigid-transform-point.cpp  spaces.cpp
src/spaces/: multibody.hpp  pinocchio-groups.hpp  sphere.hpp  tangent-bundle.hpp  tangent-bundle.hxx
tests/: CMakeLists.txt  bfgs-strategy.cpp  block-chol.cpp  block-test.hpp  block-tri.cpp  bunchkaufman.cpp  cholesky-bench.cpp  cholesky-block-sparse-bench.cpp  cholesky-block-sparse.cpp  cholesky-dense-bench.cpp  cholesky-sparse-bench.cpp  cnpy-load.cpp  cnpy.cpp  cnpy.hpp  constraints.cpp  costs.cpp  finite-diff.cpp  functions.cpp  linesearch.cpp  manifolds.cpp  math.cpp  npy_payload.npy  npy_payload2.npy  solver.cpp  tri-solve-bench.cpp  tri-solve.cpp  util.cpp  util.hpp
tests/python/: CMakeLists.txt  polymorphic_test.cpp  test_1d_funs.py  test_1d_quadratic_fun.py  test_costs.py  test_functions.py  test_manifolds.py  test_polymorphic.py  test_print.py
unittest/: CMakeLists.txt  block-chol.cpp  constraint.cpp  constraints.cpp  cost.cpp  costs.cpp  finite-diff.cpp  function.cpp  functions.cpp  functor.cpp  manifold.cpp  manifolds.cpp  merit.cpp  residual.cpp  solver.cpp
(+135 files in other folders)
